methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:12: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime19.FlowerCase'
 override def run() {
              ^